[package]
name = "superdev"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "2.3.1"
solana-client = "2.3.2"
solana-cli-config = "2.3.2"
spl-token = "8.0.0"
bincode = "2.0.1"
base64 = "0.22.1"
bs58 = "0.5.1"
spl-associated-token-account = "7.0.0"

